# comp0016_avanade_prompt_injection

./: .gitignore  AGENTS.md  FEATURES.md  LICENSE.md  README.md  package-lock.json
backend/: .env.example  ARCHITECTURE.md  README.md  backend_documentation.md  data.sqlite  package-lock.json  package.json  pyproject.toml  pytest.ini
backend/ai-chatbot/: notes.md
backend/src/: __init__.py  app.ts  config.ts  container.py  main.py  server.ts
backend/src/adapters/evaluators/: simple_evaluator.ts
backend/src/adapters/mitigations/: registry.ts
backend/src/adapters/providers/: mock_provider.ts
backend/src/api/: deps.py  server.py
backend/src/app/: provider_router.py  runner_router.py
backend/src/core/: exceptions.py
backend/src/db/: index.ts  schema.sql
backend/src/domain/: evaluator.ts  mitigation.ts  model_provider.ts  types.ts
backend/src/infra/: db.py
backend/src/prompt_injection_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/repos/: run_repo.ts  suite_repo.ts  test_repo.ts
backend/src/routes/: models.ts  runs.ts  suites.ts  tests.ts
backend/src/services/: run_service.ts  suite_service.ts  test_service.ts
backend/src/utils/: ids.ts  redact.ts
backend/tests/: conftest.py
backend/tests/api/: test_chat_endpoint.py
backend/tests/app/: test_prompt_enhancer_routes.py  test_prompt_enhancer_service.py  test_provider_router.py
backend/tests/integration/: test_anthropic_models_live.py  test_chat_live.py  test_openai_compatible_models_live.py  test_openai_live.py  test_openai_models_live.py
(+167 files in other folders)
