[project]
name = "prompt-injection-platform-backend"
version = "0.1.0"
description = "Backend for the Prompt Injection Testing Platform"
requires-python = ">=3.10"

dependencies = [
    # Web
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",

    # Database
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0",

    # HTTP (providers use this)
    "httpx>=0.27",

    # Env loading (conftest uses it)
    "python-dotenv>=1.0",

    # Validation (FastAPI dependency but we pin modern)
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
]

integration = [
    "openai>=1.0",
    "anthropic>=0.25",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that call real model APIs"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
